UpdateDependencyHint should work on plugins with default maven group id
 - default plugins can omit the group ID, the hint should still check
   their versions
 - made hint aware of the reporting plugin section (thanks Matthias Bläsing)
 - moved module to JDK 11 since it already has JDK 11 dependencies